connection for nlp and tts added to main.py, tts works now

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-ELEVENLABS_API_KEY=sk_1a958d95f6a384f98148d26553cb0adbb6c09ad7c5289831
+ELEVENLABS_API_KEY=sk_7a09f1cb30197b41a8a4cfd10362069b116886ebb6a72b98
+OPENAI_API_KEY=
