linked gemini for nlp, training remains

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 ELEVENLABS_API_KEY=sk_7a09f1cb30197b41a8a4cfd10362069b116886ebb6a72b98
-OPENAI_API_KEY=
+GEMINI_API_KEY=AIzaSyD4hwv54phDEQKq5NMYKTLDlx6Mvq1AiYQg
